# FinRatioAnalysis

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENCE  LICENSE  PUBLISHING.md  QUICK_PUBLISH.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.2.2.md  TESTING.md  VERSION_MANAGEMENT.md  __init__.py  bump_version.py  pyproject.toml  pytest.ini  setup.cfg  setup.py
.agents/skills/mcp-builder/scripts/: evaluation.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish-to-pypi.yml  tests.yml
example/: example.ipynb  example_mcp.ipynb  exmple.ipynb
finratioanalysis_mcp/: __init__.py  __main__.py  adapters.py  config.py  errors.py  models.py  server.py
finratioanalysis_mcp/tools/: __init__.py  capm.py  ccc.py  company_snapshot.py  efficiency_ratios.py  historical_valuation_metrics.py  leverage_ratios.py  liquidity_ratios.py  return_ratios.py  valuation_growth_metrics.py  wacc.py  z_score.py
scripts/: snapshot_library_schema.py  test_anthropic_connection.py  verify_evaluation_answers.py
specs/001-mcp-server/: data-model.md  evaluation-test-report.md  evaluation-test.xml  evaluation.xml  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-mcp-server/contracts/: README.md  finratio_capm.json  finratio_ccc.json  finratio_company_snapshot.json  finratio_efficiency_ratios.json  finratio_historical_valuation_metrics.json  finratio_leverage_ratios.json  finratio_liquidity_ratios.json  finratio_return_ratios.json  finratio_valuation_growth_metrics.json  finratio_wacc.json  finratio_z_score.json
tests/: __init__.py  conftest.py  test_capm.py  test_ccc.py  test_efficiency_ratios.py  test_historical_valuation.py  test_initialization.py  test_integration_real_data.py  test_leverage_ratios.py  test_liquidity_ratios.py  test_return_ratios.py  test_valuation_growth_metrics.py  test_vcg_integration.py  test_wacc.py  test_z_score.py
tests/fixtures/: __init__.py  sample_data.py
tests_mcp/: conftest.py  test_adapters.py  test_bank_missing_fields.py  test_checkpoint.py  test_error_invalid_ticker.py  test_error_unsupported_freq.py  test_errors.py  test_integration_bank.py  test_integration_live.py  test_integration_recent_ipo.py  test_markdown_format.py  test_no_stack_traces.py  test_server_boot.py  test_tool_contracts.py
tests_mcp/fixtures/: __init__.py  library_schema.json
tests_mcp/tools/: __init__.py  test_capm.py  test_ccc.py  test_company_snapshot.py  test_company_snapshot_partial.py  test_efficiency_ratios.py  test_historical_valuation_metrics.py  test_leverage_ratios.py  test_liquidity_ratios.py  test_return_ratios.py  test_valuation_growth_metrics.py  test_wacc.py  test_z_score.py
