[project]
name = "FinRatioAnalysis"
version = "0.0.7"
description = "Quantitative Finance Ratio Analysis"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Lorenzo Cárdenas Cárdenas", email = "lorenzo_cardenas@msn.com" }
]
license = { text = "MIT" }
keywords = ["python", "finance", "quantitative analysis", "fundamental analysis", "portfolio"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "yfinance",
    "numpy",
    "pandas",
    "plotly",
    "requests",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["FinRatioAnalysis"]
