[project]
name = "FinRatioAnalysis"
version = "0.2.1"
description = "Quantitative Finance Ratio Analysis with VCG (Value, Quality, Growth) Metrics"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Lorenzo Cárdenas Cárdenas", email = "lorenzo_cardenas@msn.com" }
]
license = "MIT"
keywords = ["python", "finance", "quantitative analysis", "fundamental analysis", "portfolio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "yfinance",
    "numpy",
    "pandas",
    "plotly",
    "requests",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.2",
    "pydantic>=2",
    "pydantic-settings>=2",
]

[project.scripts]
finratioanalysis-mcp = "finratioanalysis_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["FinRatioAnalysis", "finratioanalysis_mcp", "finratioanalysis_mcp.tools"]
