[project]
name = "FinRatioAnalysis"
version = "0.2.1"
description = "Quantitative Finance Ratio Analysis with VCG (Value, Quality, Growth) Metrics and MCP Server Support"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Lorenzo Cárdenas Cárdenas", email = "lorenzo_cardenas@msn.com" }
]
license = { text = "MIT" }
keywords = ["python", "finance", "quantitative analysis", "fundamental analysis", "portfolio", "mcp", "llm", "financial ratios"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "yfinance",
    "numpy",
    "pandas",
    "plotly",
    "requests",
    "ipykernel>=7.2.0",
]

[project.urls]
Homepage = "https://github.com/lorenzo1285/FinRatioAnalysis"
Repository = "https://github.com/lorenzo1285/FinRatioAnalysis"
Documentation = "https://github.com/lorenzo1285/FinRatioAnalysis/tree/main/specs/001-mcp-server"
"Bug Tracker" = "https://github.com/lorenzo1285/FinRatioAnalysis/issues"
Changelog = "https://github.com/lorenzo1285/FinRatioAnalysis/blob/main/CHANGELOG.md"

[project.optional-dependencies]
mcp = [
    "mcp>=1.2",
    "pydantic>=2",
    "pydantic-settings>=2",
]

[project.scripts]
finratioanalysis-mcp = "finratioanalysis_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "jsonschema>=4.0",
    "build>=0.10",
    "twine>=4.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["FinRatioAnalysis", "finratioanalysis_mcp", "finratioanalysis_mcp.tools"]
