[metadata]
name = FinanceAnalysis
version = 0.0.1
author = Lorenzo Cárdenas Cárdenas
author_email = lorenzo_cardenas@msn.com
description = Finance Ratio Analysis
long_description = file: README.md
url = https://github.com/lorenzo1285
classifiers =
    Programing Lenguage :: Python :: 
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find: https://pypi.org/project/yahoo-finance/
python_requires = >= 3.7
include_package_data = False